@@ -290,6 +290,13 @@
       <scope>test</scope>
       <version>4.4.0</version>
     </dependency>
+    <!-- Mockito inline required to mock static methods -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>4.4.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <artifactId>easymock</artifactId>
@@ -341,6 +348,39 @@
     <groupId>com.ktechpit</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <forkMode>always</forkMode>
+          <argLine>-Dserver.dir=${project.basedir}
+            -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
+            -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
+          </argLine>
+          <excludes>
+            <!-- Exclude qa -->
+            <exclude>qa.**</exclude>
+            <!-- Exclude classes that starts with Test but were previously in src/main -->
+            <exclude>com.zimbra.cs.util.yauth.**</exclude>
+            <exclude>com.zimbra.cs.util.tnef.mapi.TestTnefTimeZone.java</exclude>
+            <!-- Exclude classes that were already excluded before maven migration -->
+            <exclude>com.zimbra.cs.mailbox.CalendarItemTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.SendMsgTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.CalendarRequestTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.GetMsgTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.ModifyProfileImageTest.java</exclude>
+            <!-- Excluded temporarily because java.util.MissingResourceException: Can't find bundle for base name ZsMsg, locale en_US -->
+            <exclude>com.zimbra.cs.mime.ParsedMessageTest.java</exclude>
+          </excludes>
+        </configuration>
+
+      </plugin>
+    </plugins>
+  </build>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
